app-service.yml
apiVersion: v1
kind: Service

metadata:
  name: my-app-service

spec:
  selector:
    app: my-app

  ports:
    - port: 80
      targetPort: 5000

  type: NodePort
